<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIVE Framework</string>
    <string name="action_settings">Settings</string>
    <string name="dailog_logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_name">NAME: </string>
    <string name="dialog_id">ID: </string>
    <string name="dialog_class">CLASS: </string>
    <string name="device_admin_descriptions">This lets HIVE system perform some system functions</string>
    <string name="device_admin_title">Device Administrator</string>
    <string name="device_admin_desc">HIVE requires device administrator permissions in order to function properly</string>
    <string name="device_admin_go">Set as Device Administrator</string>
    <string name="error_admin_not_enabled">HIVE is not running as device administrator. Logout can\'t be done.</string>
    <string name="dialog_selection_set_admin">Set as Admin</string>
    <string name="no_settings">No settings are available at this time :/</string>
    <string name="prefs_category_launcher">Home</string>
    <string name="prefs_category_launcher_sum">Homescreen launcher preferences</string>

    <string-array name="prefs_launcher_transition_entries">
        <item>Slide</item>
        <item>Zoom Out</item>
    </string-array>
    <string-array name="prefs_launcher_transition_values">
        <item>slide</item>
        <item>zoom-out</item>
    </string-array>

    <string name="prefs_launcher_category_ui_title">User Interface</string>
    <string name="prefs_launcher_transition_title">Transition Animation</string>
    <string name="prefs_launcher_transition_sum">Animation displayed when swiping between homescreen pages</string>
    <string name="prefs_launcher_transition_default">slide</string>
    <string name="no_connection">Can\'t communicate with HIVE servers</string>
    <string name="no_connection_info">\nPlease contact your administrators for assistance</string>
    <string name="wireless_settings">Wireless Settings</string>

</resources>