<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="340dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/userAvatar"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar_default_4" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:background="#3a3a3a" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#f2f2f2" />

            <TextView
                android:id="@+id/UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#c5c5c5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#f2f2f2" />

            <TextView
                android:id="@+id/UserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#c5c5c5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="3dp"
            android:paddingTop="3dp" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_class"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#f2f2f2" />

            <TextView
                android:id="@+id/UserClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#c5c5c5" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#3a3a3a"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/dialog_logout"
                    style="@android:style/Widget.Holo.Button.Borderless.Small"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dailog_logout" />

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:background="#3a3a3a"
                    android:orientation="vertical" >
                </LinearLayout>

                <Button
                    android:id="@+id/dialog_cancel"
                    style="@android:style/Widget.Holo.Button.Borderless.Small"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>